--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="org">
             <h1 class="nome">Welington Ferreira de Souza</h1>
             <nav class="navegacao">
-                <a href="#inicio">Início</a>
+                <a href="#inicio1">Início</a>
                 <a href="#sobre_mim">Sobre</a>
                 <a href="#skill">Skills</a>
                 <a href="#projetos">Projetos</a>
@@ -23,14 +23,17 @@
     </header>
 
      <main>
-        <div id="inicio" class="inicio">
+        <div id="inicio1" class="inicio">
             <img class="img2" src="imagens/foto2.png" alt="">
-            <div>
+            <div class="div_inicio">
                 <h2>Prazer, sou o</h2>
                 <h1>Welington Ferreira de Souza</h1>
-                <h2>estudando de programação no foco de ser FullStack</h2>
-                <a href="https://www.youtube.com/watch?v=2cOK2F0voBk" target="_blank">linkdin</a>
-                <a href="https://www.youtube.com/watch?v=2cOK2F0voBk" target="_blank">github</a>
+                <h2>estudante de programação front-end. <br>
+                    Neste perfil você verá um pouco do que aprendi até o momento. <br>
+                    A própria página, Alguns projetos próprios,  e meu nível em cada linguagem.
+                </h2>
+                <a class="botao" href="https://www.linkedin.com/in/welington-ferreira-659351204/" target="_blank"><img class="logo_linkgit" src="imagens/linkedin.png" alt=""> linkdin</a>
+                <a class="botao" href="https://github.com/welington3399/portifolio.git" target="_blank"><img class="logo_linkgit" src="imagens/github.png" alt=""> GitHub</a>
             </div>
         </div>
         <div class="sobre" id="sobre_mim">
@@ -48,17 +51,25 @@
         </div>
         <div id="skill" class="nome_id">
             <h2>Minhas Skills</h2>
-            <div class="skills">
-                <div class="format">
-                    <p>a</p>
-                </div>
-                <div class="format">
-                    <p>a</p>
-                </div>
-                <div class="format">
-                    <p>a</p>
+            <div class="org_skill">
+                <img class="img_html" src="imagens/html-5.png" alt="">
+                <div class="container">
+                    <div class="html"></div>
                 </div>
             </div>
+            <div class="org_skill">
+                <img class="img_html" src="imagens/css-3.png" alt="">
+                <div class="container">
+                    <div class="css"></div>
+                </div>
+            </div>
+            <div class="org_skill">
+                <img class="img_html" src="imagens/javascript.svg" alt="">
+                <div class="container">
+                    <div class="js"></div>
+                </div>
+            </div>
+            
         </div>
         <div id="projetos" class="nome_id">
             <h2>Meus Projetos</h2>
