--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- fonte importada -->
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600&display=swap" rel="stylesheet">
-    <!-- importação de js de rolagem do scroll -->
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- importação dos css -->
     <link rel="stylesheet" href="css/start.css">
     <link rel="stylesheet" href="css/skills.css">
@@ -28,7 +26,7 @@
     <!-- início do cabeçalho -->
     <header id="cabecalho">
         <div class="org-header">
-            <h1 id="nome">Welington Ferreira de Souzaa </h1>
+            <h1 id="nome">Welington Ferreira de Souza</h1>
             <!-- menu de nevagação -->
             <nav id="nav_colors" class="nav-bar">
                 <ul class="nav-menu">
@@ -57,8 +55,8 @@
         <div id="inicio1" class="inicio">
             <div id="inicio_colors" class="div_inicio">
                 <img class="img_start" src="imagens/foto.jpg" alt="">
-                <h2>Prazer, me chamo</h2>
-                <h1>Welington Ferreira de Souza</h1>
+                <h2 id="saud">Prazer, me chamo</h2>
+                <h1 id="nome_start">Welington Ferreira de Souza</h1>
                 <h2>estudante de programação front-end. <br>
                     Neste perfil você verá um pouco do que aprendi até o momento. <br>
                     A própria página, alguns projetos próprios,  e meu nível em cada linguagem.
@@ -212,57 +210,6 @@
             </div>
         </div>
 
-<!-- 
-        <div id="skill" class="nome_id">
-            <h2>Minhas Skills</h2>
-            <div class="org_skill">
-                <div class="tam_skill">
-                    <img class="img_skill" src="imagens/html-5.png" alt="">
-                    <div class="container">
-                        <div class="html"></div>
-                        <p>HTML</p>
-                    </div>
-                </div>
-                <div class="tam_skill">
-                    <img class="img_skill" src="imagens/css-3.png" alt="">
-                    <div class="container">
-                        <div class="css"></div>
-                        <p>CSS</p>
-                    </div>
-                </div>
-                <div class="tam_skill">
-                    <img class="img_skill" src="imagens/script-java.png" alt="">
-                    <div class="container">
-                        <div class="js"></div>
-                        <p>JAVA</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="org_skill">
-                <div class="tam_skill">
-                    <img class="img_skill" src="imagens/python.png" alt="">
-                    <div class="container">
-                        <div class="python"></div>
-                        <p>PYTHON</p>
-                    </div>
-                </div>
-                <div class="tam_skill">
-                    <img class="img_skill" src="imagens/node-js.png" alt="">
-                    <div class="container">
-                        <div class="node"></div>
-                        <p>NODE JS</p>
-                    </div>
-                </div>
-                <div class="tam_skill">
-                    <img class="img_skill" src="imagens/reactJs.png" alt="">
-                    <div class="container">
-                        <div class="react"></div>
-                        <p>REACT</p>
-                    </div>
-                </div>
-            </div>
-        </div> -->
 
         <div id="projetos" class="nome_id">
             <h2>Meus Projetos</h2>
