--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Welington Ferreira de Souza</title>
 </head>
 <!-- início da página -->
-<body id="modedark" >
+<body>
     <!-- início do cabeçalho -->
     <header id="cabecalho">
         <div class="org-header">
